# academic-journals

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: cli.rs  journal.rs  lib.rs  main.rs
