[package]
name = "academic-journals"
version = "0.1.0"
edition = "2021"
description = "A library for managing journal abbreviations and full names"
license = "Apache-2.0"
repository = "https://github.com/razvanazamfirei/academic-journals" # URL to the repository
documentation = "https://docs.rs/academic-journals"
authors = ["Razvan Azamfirei <razvan@azamfirei.com>"]
exclude = ["abbrv.jabref.org/*", "src/static_journals.rs", "*.csv"]
readme = "README.md"

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"] }
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"]}
lazy_static = "1.4.0"
bincode = "1.3.3"

[features]
default = ["dotless"]
dot = []
dotless = []

[build-dependencies]
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"] }
anyhow = "1.0.75"
bincode = "1.3.3"
