[package]
name = "academic-journals"
version = "0.1.3"
edition = "2021"
description = "A library for managing journal abbreviations and full names"
license = "Apache-2.0"
repository = "https://github.com/razvanazamfirei/academic-journals"
authors = ["Razvan Azamfirei <razvan@azamfirei.com>"]
readme = "README.md"

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.193", features = ["serde_derive"], default-features = false }
anyhow = { default-features = false, version = "1.0.76" }
clap = { version = "4.4.11", features = ["derive"] }
lazy_static = "1.4.0"
bincode = "1.3.3"

[features]
default = ["dotless", "online"]
dot = []
dotless = []
online = []

[build-dependencies]
csv = "1.3.0"
serde = { version = "1.0.193", features = ["serde_derive"], default-features = false }
anyhow = "1.0.76"
bincode = "1.3.3"

[package.metadata.docs.rs]
features = ["dotless"]
no-default-features = true

